objects/External_Collaboration_Request__c.object
<CustomObject>
    <fields>
        <fullName>Access_Level__c</fullName>
        <label>Grant Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PREVIEWER</fullName>
                    <label>Previewer (View)</label>
                </value>
                <value>
                    <fullName>VIEWER</fullName>
                    <label>Viewer (View, Download)</label>
                </value>
                <value>
                    <fullName>PREVIEWER_UPLOADER</fullName>
                    <label>Previewer Uploader (View, Upload)</label>
                </value>
                <value>
                    <fullName>VIEWER_UPLOADER</fullName>
                    <label>Viewer Uploader (Edit, View, Download, Upload)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Valid_Until__c</fullName>
        <description>Indicates the date until which access must be provided to the collaborators.</description>
        <inlineHelpText>Indicates the date until which access must be provided to the collaborators.</inlineHelpText>
        <label>Access Valid Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>External_Collaboration_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <label>Deal</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>External Collaboration Requests</relationshipLabel>
        <relationshipName>External_Collaboration_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Folder_Id__c</fullName>
        <label>Folder Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder_Name__c</fullName>
        <label>Folder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Request</label>
        <referenceTo>External_Collaboration_Request__c</referenceTo>
        <relationshipLabel>External Collaboration Requests</relationshipLabel>
        <relationshipName>External_Collaboration_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>External Collaboration Request</label>
    <nameField>
        <displayFormat>ECR-{0}</displayFormat>
        <label>Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Collaboration Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>